fix: font sizes too small

--- a/src/assets/stylus/components/recipe-print-area.styl
+++ b/src/assets/stylus/components/recipe-print-area.styl
@@ -12,6 +12,8 @@
 
     z-index: 5432;
 
+    font-size: 16px;
+
     table {
         margin-bottom: 0;
 
